# HostBridge

./: .env.example  .gitignore  CommandsToTry.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  secrets.example.env
admin/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/lib/: api.auth-expiry.test.ts  api.ts  logsWebSocket.ts  (+2 more)
docs/: DOCKER_HUB_PUBLISHING.md  LLM_SYSTEM_PROMPT.md  TOOL_CATALOG.md  acceptance_runbooks.md
examples/: config.basic.yaml  config.development.yaml  config.restricted.yaml  docker-compose.production.yaml  secrets.env.example
scripts/: generate_tool_docs.py
src/: __init__.py  admin_api.py  audit.py  config.py  database.py  hitl.py  logging_config.py  main.py  models.py  policy.py  secrets.py  workspace.py
src/tools/: docker_tools.py  fs_tools.py  git_tools.py  http_tools.py  memory_tools.py  plan_tools.py  shell_tools.py  workspace_tools.py
static/admin/: index.html
tests/: __init__.py  test_admin_dashboard.py  test_api.py  test_docker_api.py  test_docker_tools.py  test_fs_list.py  test_fs_search.py  test_fs_tools.py  test_fs_write.py  test_git_api.py  test_git_tools.py  test_hitl.py  test_hitl_integration.py  test_hitl_websocket.py  test_http_tools.py  test_integration.py  test_load.py  test_mcp.py  test_memory_tools.py  test_plan_tools.py  test_policy.py  test_secrets.py  test_security.py  test_shell_execute.py  test_tool_explorer_contract.py  test_workspace.py
(+23 files in other folders)
